# sorting_algorithms

./: .gitignore  README.md  author.md
source/: CMakeLists.txt  main.cpp
source/decisao/: insertionDecision.h  insertionDecision2.txt  timingDecision.cpp
source/lib/: sorting.h  timing.cpp
source/testes/: tests.cpp
source/times/: all_random.txt  non_decreasing.txt  non_increasing.txt  sorted25.txt  sorted50.txt  sorted75.txt
